--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
   <link rel= "stylesheet" type= "text/css" href="css/tribute.css" media ="screen">
 <style media = "screen, print">
-/* #image  {
+ #image  {
  max-width: 100%;
  height: auto;
  display: flex;
@@ -25,7 +25,7 @@ h2{
 p{
   text-align: center;
 
-} */
+}
 
 </style>
     </head>
