--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
   <link rel= "stylesheet" type= "text/css" href="css/tribute.css" media ="screen">
 <style media = "screen, print">
- #image  {
+/* #image  {
  max-width: 100%;
  height: auto;
  display: flex;
@@ -25,7 +25,7 @@ h2{
 p{
   text-align: center;
 
-}
+} */
 
 </style>
     </head>
@@ -58,12 +58,13 @@ p{
     <div class="column"></div>
 
 
-    <p id ="img-caption"> Streaming on HBO Max </p>
+    <center> <p id ="img-caption"> Streaming on HBO Max </p> </center>
   </div>
 </div>
 
 
 <div id="tribute-info">
+  <center>
 <p>
 
 <p>Search Party depicts the lives of New York City resident Dory Sief, her passive boyfriend Drew Gardner, flamboyant show-off Elliott Goss, and flighty actress Portia Davenport. Serving as a contrast to the group is Dory's ex-boyfriend Julian Marcus, a journalist whose blunt nature frequently puts him into conflict with others.</p>
@@ -72,7 +73,8 @@ p{
 <p>The third season focuses on Dory and Drew being tried for murdering Keith, which Dory denies any involvement in, forcing them to battle against the evidence suggesting they caused his death. A media circus soon circles around the trial, while the friends have their relationships tested and Dory's sanity gradually deteriorates.</p>
 <p>The fourth season focuses on Dory's abduction at the hands of Chip Wreck, a psychotic man unhealthily obsessed with her. The abduction sends Drew, Elliott, and Portia searching for Dory as Chip attempts to manipulate Dory against her friends.
 </p>
-
+</center>
+  
 </div>
 <a class= "center" href = "https://en.wikipedia.org/wiki/Search_Party_(TV_series)" target ="_blank"id = "tribute-link">
   <center>Click HERE for more info on Search Party</center>
