--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
   <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
-  <link rel= "stylesheet" type= "text/css" href="CSS/tribute.css" media ="screen">
+  <link rel= "stylesheet" type= "text/css" href="tribute.css" media ="screen">
 <style media = "screen, print">
 /* #image  {
  max-width: 100%;
