--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
-  <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
-  <link rel= "stylesheet" type= "text/css" href="tribute.css" media ="screen">
+ 
+  <link rel= "stylesheet" type= "text/css" href="css/tribute.css" media ="screen">
 <style media = "screen, print">
 /* #image  {
  max-width: 100%;
@@ -81,6 +81,6 @@ p{
 <center>  <img src="images/search_party_logo.png" alt= "search party logo" id="image"></center>
 </a>
 </div>
-
+<script type="text/javascript" src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 </body>
   </html>
