--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 
-  <link rel= "stylesheet" type= "text/css" href="css/tribute.css" media ="screen">
+  <link rel= "stylesheet" type= "text/css" href="CSS/tribute.css" media ="screen">
 <style media = "screen, print">
 /* #image  {
  max-width: 100%;
