--- a/index.html
+++ b/index.html
@@ -79,6 +79,6 @@ p{
 <center>  <img src="images/search_party_logo.png" alt= "search party logo" id="image"></center>
 </a>
 </div>
-<script type="text/javascript" src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
+<!-- <script type="text/javascript" src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script> -->
 </body>
   </html>
